--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
 			<div id="map-dropdown"></div>
 
 		<div class="info-panel">
-			<div id="chart-container" class="chart-container"></div>
-			<button class="accordion">Section 1</button>
+            <img src="img/wildfire_acres_burned.png" alt="NIFC Bar Graph" align="middle" width="auto" height="auto">
+			
+			<button class="accordionSection1">Section 1</button>
 			<div class="panel">
-				<p class="panelcontent">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <img src="img/wildfire_acres_burned.png" alt="NIFC Bar Graph" align="middle" width="auto" height="auto">labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div id="chart-container" class="chart-container"></div>
+				<p class="panelcontent">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
             <div id="toggleContainer">
                <table class="fire-poly-toggle">
@@ -75,12 +77,12 @@
                </table>
             </div>
 
-			<button class="accordion">Section 2</button>
+			<button class="accordionSection2">Section 2</button>
 			<div class="panel">
 				<p class="panelcontent">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 
-			<button class="accordion">Section 3</button>
+			<button class="accordionSection2">Section 3</button>
 			<div class="panel">
 				<p class="panelcontent">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
