--- a/index.html
+++ b/index.html
@@ -56,18 +56,20 @@
 	<div class="main-container">
 		<div id="map-container" class="map-container"></div>
 			<div id="map-dropdown"></div>
-
+        
 		<div class="info-panel">
             <img src="img/wildfire_acres_burned.png" alt="NIFC Bar Graph" align="middle" width="auto" height="auto">
 			
 			<button class="accordionSection1">Section 1</button>
 			<div class="panel">
+                <div class = "year-dropdown"></div>
                 <div id="chart-container" class="chart-container"></div>
 				<p class="panelcontent">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 
 			<button class="accordionSection2">Section 2</button>
 			<div class="panel">
+                <div class = "cost-dropdown"></div>
 				<p class="panelcontent">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 
