added div for top bar

--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
 
 	</div>
 
-	<header class="header">
-		<h1><i>FOREST FIRE VISUALIZER</i></h1>
-        <img src="img/Forest-Service-Logo.png" alt="Forest Service Shield" align="middle" width="46" height="50">
-		<button id="header-button" class="header-button">Links</button>
-	</header>
+	<div class="navbar">
+		<header class="header">
+			<h1><i>FOREST FIRE VISUALIZER</i></h1>
+			<img src="img/Forest-Service-Logo.png" alt="Forest Service Shield" align="middle" width="46" height="50">
+			<button id="header-button" class="header-button">Links</button>
+		</header>
+	</div>
 
 	<div id="header-dropdown-menu" class="header-dropdown-menu">
 		<ul>
