--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="panel">
                 <div class = "year-dropdown"></div>
                 <div id="chart-container" class="chart-container"></div>
-                <div id="chart-container" class="chart-container"></div>
+                
 				<p class="panelcontent">More wildfires occur in the East and in central states, but the wildfires in the West are larger and burn more acreage.The highest states are Alaska, Arizona, California, Colorado, Idaho, Montana, New Mexico, Nevada, Oregon, Utah, and Washington.<br><br>
 
                     In 2018, nearly 36,200 fires burned 1.7 million acres in the East, compared with nearly 22,000 wildfires that burned more than 7.0 million acres in the West. In the East, where there is less federal acreage, most of the fires occur on nonfederal lands. This is in stark contrast to the West most of the fires occur on federal lands. In 2018, 87% (1.5 million acres) of the acreage burned in the East was on nonfederal land, whereas 63% (4.4 million acres) of the acreage burned in the West was on federal land. 
@@ -87,6 +87,7 @@
 			<button class="accordionSection2">The Cost of Wildfires</button>
 			<div class="panel">
                 <div class = "cost-dropdown"></div>
+                <div id="chart-containerCost" class="chart-containerCost"></div>
 				<p class="panelcontent">Acreage
                     burned also does not indicate the severity of the wildfire or
                     the degree of impact to the forest, soils, or any other
