--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 			crossorigin="anonymous"></script> <!-- integrity and crossorigin atts ensure browsers will acccept this CDN script-->
     <!--<script type="text/javascript" src="js/viz.js"></script>-->
-    <script type="text/javascript" src="js/viz_csvBuild.js"></script>
+    <script type="text/javascript" src="js/viz.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 
 
