Minor cosmetic updates

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<p>Thank you for checking out the Forest Fire Visualizer.</p>
 		<p>This tool is designed to help you learn about historically significant forest fires.
 		as well as educate you on how you can help prevent forest fires. Click on the tabs to the left to learn more.</p>
+        <br><img src="img/smokeyBearSmall.png" alt="Smokey Bear Icon" align="middle" width="50" height="50" style="margin:0px 200px 0px">
 	</div>
 
 	<div class="data-page-splash" hidden>
@@ -27,7 +28,8 @@
 		</div>
 		<ul class="data-list">
 			<li><p>Forest fire spatial data: </p><a target="_blank" href="https://www.nifc.gov/index.html">National Interagency Fire Center</a></li>
-			<li><p>Other Data</p></li>
+			<li><p>Other Data: </p><a target="_blank" href="https://en.wikipedia.org/wiki/List_of_wildfires">Major Wildfires Wikipedia</a>, 
+            <a target="_blank" href="https://fas.org/sgp/crs/misc/IF10244.pdf">Congressional Wildfire Statistics</a></li>
 		</ul>
 
 
