--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </p>
 			     </div>
 
-			<button class="accordionSection1">Wildfire Destruction in Total Area</button>
+			<button class="accordionSection1">Wildfire Destruction by State</button>
 			<div class="panel">
                 <div class = "year-dropdown"></div>
                 <div id="chart-container" class="chart-container"></div>
@@ -86,7 +86,7 @@
                 </p>
 			</div>
 
-			<button class="accordionSection2">The Cost of Wildfires</button>
+			<button class="accordionSection2">Major Wildfires and their Cost</button>
 			<div class="panel">
                 <div class = "cost-dropdown"></div>
                 <div id="chart-containerCost" class="chart-containerCost"></div>
