minor edits (capitalization, punctuation etc.)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<h2>Welcome!</h2>
 		</div>
 		<p>Thank you for checking out the Forest Fire Visualizer.</p>
-		<p>This tool is designed to help you learn about historically significant forest fires.
+		<p>This tool is designed to help you learn about historically significant forest fires,
 		as well as educate you on how you can help prevent forest fires. Click on the tabs to the left to learn more.</p>
         <br><img src="img/smokeyBearSmall.png" alt="Smokey Bear Icon" align="middle" width="50" height="50" style="margin:0px 200px 0px">
 	</div>
@@ -80,13 +80,13 @@
                 <div class = "year-dropdown"></div>
                 <div id="chart-container" class="chart-container"></div>
                 
-				<p class="panelcontent">More wildfires occur in the East and in central states, but the wildfires in the West are larger and burn more acreage.The highest states are Alaska, Arizona, California, Colorado, Idaho, Montana, New Mexico, Nevada, Oregon, Utah, and Washington.<br><br>
+				<p class="panelcontent">More wildfires occur in the east and in central states, but the wildfires in the west are larger and burn more acreage.The highest states are Alaska, Arizona, California, Colorado, Idaho, Montana, New Mexico, Nevada, Oregon, Utah, and Washington.<br><br>
 
                     In 2018, nearly 36,200 fires burned 1.7 million acres in the East, compared with nearly 22,000 wildfires that burned more than 7.0 million acres in the West. In the East, where there is less federal acreage, most of the fires occur on nonfederal lands. This is in stark contrast to the West most of the fires occur on federal lands. In 2018, 87% (1.5 million acres) of the acreage burned in the East was on nonfederal land, whereas 63% (4.4 million acres) of the acreage burned in the West was on federal land. 
                 </p>
 			</div>
 
-			<button class="accordionSection2">Major Wildfires and their Cost</button>
+			<button class="accordionSection2">Major Wildfires and Their Cost</button>
 			<div class="panel">
                 <div class = "cost-dropdown"></div>
                 <div id="chart-containerCost" class="chart-containerCost"></div>
