--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 			<button class="accordionSection2">Causes and Prevention</button>
 			<div class="panel">
-				<p class="panelcontent">Not all forest fires are bad, and many are controlled, prescribed burns to keep the forests healthy and to prevent worse, uncontrolled fires.<br><br>
+				<p class="panelcontent">Not all forest fires are bad, and many are controlled, prescribed burns to keep the forests healthy and to prevent worse, uncontrolled fires. However, those uncontrolled wildfires have the potential to be very destructive. As this visualizer has shown the destruction caused by out of control should be avoided at all costs. The best way to avoid them is through prevention. Please carefully read these 7 easy steps to do your part in preventing forest fires.<br><br>
                 <strong>1. Report unattended fires</strong><br> 
                 If you are ever out and about and notice a fire that is burning out of control or is unattended, immediately call 911 or your local fire department . When the conditions are right, even a small campfire can turn into a massive fire. .”See something? Say something,” is one of the key wildfire prevention methods
                 <br><br>
